# simple_todo_list

./: .gitignore  Cargo.toml  README.md  db.json  test_db.json
.cargo/: config.toml
src/: main.rs
src/models/: task.rs
src/services/: mod.rs  todo_list_service.rs
src/utils/: date.rs  datetime_format.rs  mod.rs
tests/: integration_tests.rs
